2012-03-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/LoggerOutputTty.cpp (logHeader): now using gettext.

	* src/LoggerOutputTty.hpp: remove 'using namespace std'.
	* src/LoggerOutputYaml.hpp: remove 'using namespace std'.
	* src/LoggerOutputFile.hpp: remove 'using namespace std'.
	* src/LoggerOutput.hpp: remove 'using namespace std'.
	* src/ObjectAttribute.hpp: remove 'using namespace std'.

2012-03-10  Jérôme Pasquier  <rainbru@free.fr>

	* configure.in: search for Boost.Format with AC_CHECK_HEADERS.

2012-03-08  Jérôme Pasquier  <rainbru@free.fr>

	* Makefile.am: remove multiple definition of EXTRA_DIST and
	man_MANS.

	* configure.in: added invocation to AM_GNU_GETTEXT and
	AM_GNU_GETTEXT_VERSION.

2012-03-08  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath, m4/ChangeLog.
	* configure.in (AC_OUTPUT): Add po/Makefile.in.

2012-03-08  Jérôme Pasquier  <rainbru@free.fr>

	* src/LoggerDef.hpp: gettext macro implemented.

	* src/Logger.cpp (liblogger_initialize): implementation of the
	library initialization for gettext.

2012-02-20  Jérôme Pasquier  <rainbru@free.fr>

	* Makefile.am: Many changes due to removing generated files.

	* .: removed some autoproject generated files, including logger.cc,
	xmalloc.* and getopt*.

	* configure.in(AC_INIT): change parameter from logger.cc
	to src/Logger.cpp. It was an autoproject generated file.

2012-02-02  Jérôme Pasquier  <rainbru@free.fr>

	* src/tool/log_reader.rb: deactivated dialog's cancel button
	because of a segfault when exitting QApplication.
	* src/tool/log_reader.rb: HTML markup in dialog works again.

	* src/tool/log_reader.rb: Makes a dialog appears at startup and
	let the user choose to continue.


2012-02-02  Jérôme Pasquier  <rainbru@free.fr>

	* src/tools/Makefile.am (EXTRA_DIST): Added missing files MainWindow.ui,
	log_reader.rb and test.yaml to archive.