@@ -33,6 +33,8 @@
       - [ ] v3: sigsegv trap handling
 - [ ] Should find or create a suitable property editor 
 **** TODO Continue Logger in src/logger
+     CLOCK: [2012-03-20 mar. 19:26]--[2012-03-20 mar. 19:46] =>  0:20
+     CLOCK: [2012-03-20 mar. 18:46]--[2012-03-20 mar. 19:04] =>  0:18
      CLOCK: [2012-03-14 mer. 17:50]--[2012-03-14 mer. 18:33] =>  0:43
      CLOCK: [2012-03-14 mer. 10:41]--[2012-03-14 mer. 11:17] =>  0:36
      CLOCK: [2012-03-10 sam. 21:23]--[2012-03-10 sam. 21:38] =>  0:15
@@ -109,12 +111,11 @@
 - [X] May remove some po/ files from SVN
 - [X] May use Boost.Format to get more translatable messages
       - [X] configure script should test it
-      - [X] Add it in DEPENDENCIES and pkg-config file
+     - [X] Add it in DEPENDENCIES and pkg-config file
       - [X] see the LoggerOutputTty::logHeader implementation
       - [X] gettext must handle TRANSLATORS comments
-- [ ] Find other translatable strings
-- [ ] Really make translatable strings
-- [ ] May move configure.in DEFUN to m4/
+- [X] Find other translatable strings
+- [X] May move configure.in DEFUN to m4/
 - [ ] see the log_reader.rb bug about the ErrorTrap#show_dialog cancel
       button
 - [ ] Logger may log process time
