@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src/Logger.cpp)
 dnl Every other copy of the package version number gets its value from here
-AM_INIT_AUTOMAKE(logger, 0.0.0-7)
+AM_INIT_AUTOMAKE(logger, 0.0.0-8)
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION(0.18) 
 
@@ -22,32 +22,12 @@ AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_LIBTOOL
 
-AC_DEFUN([RB_CHECK_RBUIC],[
-  AC_ARG_VAR([TOOL_RBUIC], [Define the path to the ruby UI compiler])
-  AC_PATH_PROG(TOOL_RBUIC, rbuic4, [no])
-  case $TOOL_RBUIC in
-    no)
-      dnl Nothing
-      rbuic4_was_found=false
-      ;;    
-    *)   
-      AC_DEFINE([HAVE_RBUIC], [], [Defines if the ruby UI compiler was found])
-      AC_DEFINE(HAVE_RBUIC)
-      rbuic4_was_found=true
-      ;;
-  esac  
-  AM_CONDITIONAL(RBUIC_FOUND, test x$rbuic4_was_found = xtrue)
-])
+dnl Check for external tools
 RB_CHECK_RBUIC
 
 dnl Checks for libraries.
-AC_LANG_PUSH([C++])
-AC_CHECK_HEADERS([boost/program_options.hpp], [],
-  [AC_MSG_ERROR(You need the Boost.Program_options development library.)])
-dnl Cannot test for library with AC_CHECK_LIB due to namespace
-AC_CHECK_HEADERS([boost/format.hpp], [],
-  [AC_MSG_ERROR(You need the Boost.Format development library.)])
-dnl Cannot test for library with AC_CHECK_LIB due to namespace
+RB_CHECK_BOOST_PROGRAM_OPTIONS
+RB_CHECK_BOOST_FORMAT
 
 dnl Checks for header files.
 AC_HEADER_STDC
