@@ -1,3 +1,4 @@
 # List of source files which contain translatable strings.
 src/Logger.cpp
+src/LoggerOutputFile.cpp
 src/LoggerOutputTty.cpp
